--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,100 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="u51-t8-3wv">
+                                <rect key="frame" x="0.0" y="106" width="600" height="494"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3h9-nU-se0">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                <color key="backgroundColor" red="1" green="0.27741837229999999" blue="0.1188507239" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="ksD-Im-AyV"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V6g-IZ-ov6">
+                                <rect key="frame" x="20" y="123" width="560" height="457"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SN5-bh-4qQ">
+                                    <size key="itemSize" width="110" height="110"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1om-LV-LBA">
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="163" translatesAutoresizingMaskIntoConstraints="NO" id="pRu-8v-USH">
+                                                    <rect key="frame" x="0.0" y="8" width="110" height="78"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIL-pP-jUu">
+                                                    <rect key="frame" x="0.0" y="89" width="110" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.27741837229999999" blue="0.1188507239" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="vWO-fr-jaO"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="0.70921985815602839" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="wIL-pP-jUu" firstAttribute="leading" secondItem="1om-LV-LBA" secondAttribute="leading" id="01e-T0-00b"/>
+                                            <constraint firstAttribute="bottom" secondItem="wIL-pP-jUu" secondAttribute="bottom" id="6P6-eG-Gfj"/>
+                                            <constraint firstItem="pRu-8v-USH" firstAttribute="top" secondItem="1om-LV-LBA" secondAttribute="top" id="8f4-hW-j7I"/>
+                                            <constraint firstItem="pRu-8v-USH" firstAttribute="leading" secondItem="1om-LV-LBA" secondAttribute="leading" id="L9D-pi-6fF"/>
+                                            <constraint firstAttribute="trailing" secondItem="wIL-pP-jUu" secondAttribute="trailing" id="LR6-XH-yNL"/>
+                                            <constraint firstItem="wIL-pP-jUu" firstAttribute="top" secondItem="pRu-8v-USH" secondAttribute="bottom" id="jpP-bD-TyU"/>
+                                            <constraint firstAttribute="trailing" secondItem="pRu-8v-USH" secondAttribute="trailing" id="mAZ-oe-hZK"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="fwa-LA-eCb">
+                                <rect key="frame" x="0.0" y="62" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="u51-t8-3wv" secondAttribute="trailing" id="15f-XX-N0R"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="u51-t8-3wv" secondAttribute="bottom" id="1Nz-3M-yp3"/>
+                            <constraint firstItem="3h9-nU-se0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2vX-Ac-S2L"/>
+                            <constraint firstAttribute="trailing" secondItem="fwa-LA-eCb" secondAttribute="trailing" id="3a7-s4-QIG"/>
+                            <constraint firstItem="fwa-LA-eCb" firstAttribute="top" secondItem="3h9-nU-se0" secondAttribute="bottom" id="8nw-Ns-2Ep"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="V6g-IZ-ov6" secondAttribute="bottom" constant="20" id="MQC-nA-Sef"/>
+                            <constraint firstItem="u51-t8-3wv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Z1U-XR-6z5"/>
+                            <constraint firstItem="3h9-nU-se0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eGt-MK-P7O"/>
+                            <constraint firstItem="u51-t8-3wv" firstAttribute="top" secondItem="fwa-LA-eCb" secondAttribute="bottom" id="far-oe-JU1"/>
+                            <constraint firstItem="u51-t8-3wv" firstAttribute="top" secondItem="3h9-nU-se0" secondAttribute="bottom" id="l9p-og-beh"/>
+                            <constraint firstItem="V6g-IZ-ov6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="oCK-dM-e1v"/>
+                            <constraint firstItem="V6g-IZ-ov6" firstAttribute="top" secondItem="fwa-LA-eCb" secondAttribute="bottom" constant="20" id="s0M-oP-AEX"/>
+                            <constraint firstItem="fwa-LA-eCb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sx3-sa-dlK"/>
+                            <constraint firstAttribute="trailing" secondItem="V6g-IZ-ov6" secondAttribute="trailing" constant="20" id="t6r-6R-sZd"/>
+                            <constraint firstAttribute="trailing" secondItem="3h9-nU-se0" secondAttribute="trailing" id="tbM-FD-iOC"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="l9p-og-beh"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="363"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="163" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
