added custom cell

--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1om-LV-LBA">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1om-LV-LBA" customClass="PokeCell" customModule="pokedex" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -70,6 +70,10 @@
                                             <constraint firstItem="wIL-pP-jUu" firstAttribute="top" secondItem="pRu-8v-USH" secondAttribute="bottom" id="jpP-bD-TyU"/>
                                             <constraint firstAttribute="trailing" secondItem="pRu-8v-USH" secondAttribute="trailing" id="mAZ-oe-hZK"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="wIL-pP-jUu" id="yqP-Js-i5w"/>
+                                            <outlet property="thumbImg" destination="pRu-8v-USH" id="q4T-9Q-n6M"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
