--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -4,6 +4,11 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="pokemon.ttf">
+            <string>PokemonSolidNormal</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -22,8 +27,37 @@
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3h9-nU-se0">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgf-Cf-htK">
+                                        <rect key="frame" x="220" y="8" width="160" height="43"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="43" id="K4s-66-vx6"/>
+                                            <constraint firstAttribute="width" constant="160" id="Zj8-LX-PuG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="31"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9D5-fe-3T3">
+                                        <rect key="frame" x="541" y="15" width="51" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="16h-iB-Avw"/>
+                                            <constraint firstAttribute="width" constant="51" id="hE4-De-kAD"/>
+                                        </constraints>
+                                        <state key="normal" title="Music">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="musicButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qxc-R0-3bi"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="1" green="0.27741837229999999" blue="0.1188507239" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="kgf-Cf-htK" firstAttribute="centerY" secondItem="3h9-nU-se0" secondAttribute="centerY" id="2r8-0u-atf"/>
+                                    <constraint firstAttribute="trailing" secondItem="9D5-fe-3T3" secondAttribute="trailing" constant="8" id="HWi-Hh-Qiy"/>
+                                    <constraint firstItem="kgf-Cf-htK" firstAttribute="centerX" secondItem="3h9-nU-se0" secondAttribute="centerX" id="IfV-ER-qm8"/>
+                                    <constraint firstItem="9D5-fe-3T3" firstAttribute="top" secondItem="3h9-nU-se0" secondAttribute="top" constant="15" id="gyR-E2-TKD"/>
                                     <constraint firstAttribute="height" constant="59" id="ksD-Im-AyV"/>
                                 </constraints>
                             </view>
